--- a/src/main/resources/com/pw/eiti/wedt/textSplitter.fxml
+++ b/src/main/resources/com/pw/eiti/wedt/textSplitter.fxml
@@ -3,6 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -44,10 +46,19 @@
                <Insets top="10.0" />
             </VBox.margin>
             </HBox>
-            <TextArea disable="true" promptText="Output preview..." VBox.vgrow="ALWAYS">
-            <VBox.margin>
-               <Insets top="10.0" />
-            </VBox.margin></TextArea>
+            <TabPane VBox.vgrow="ALWAYS">
+                <Tab closable="false" text="Input file">
+                    <TextArea fx:id="inputPrevTA" editable="false" promptText="Input preview..." VBox.vgrow="ALWAYS">
+                    </TextArea>
+                </Tab>
+                <Tab closable="false" text="Output file">
+                    <TextArea fx:id="outputPrevTA" editable="false" promptText="Output preview..." VBox.vgrow="ALWAYS">
+                    </TextArea>
+                </Tab>
+                <VBox.margin>
+                    <Insets top="10.0" />
+                </VBox.margin>
+            </TabPane>
         </children>
     </VBox>
    <padding>
