--- a/app/src/main/resources/com/pw/eiti/wedt/textSplitter.fxml
+++ b/app/src/main/resources/com/pw/eiti/wedt/textSplitter.fxml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.control.TreeView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
 <BorderPane prefHeight="800.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pw.eiti.wedt.TextSplitter">
     <top>
         <MenuBar>
             <Menu text="Model">
-                <MenuItem text="Load" onAction="#onLoadModelClick" />
+                <MenuItem onAction="#onLoadModelClick" text="Load" />
             </Menu>
         </MenuBar>
     </top>
@@ -16,7 +29,7 @@
             <children>
                 <Label text="Input file">
                     <VBox.margin>
-                        <Insets top="10.0" />
+                        <Insets left="5.0" top="10.0" />
                     </VBox.margin></Label>
                 <HBox spacing="5.0">
                     <children>
@@ -24,24 +37,12 @@
                         <Button fx:id="inputFileBT" onAction="#onInputFileButtonClick" text="..." HBox.hgrow="ALWAYS" />
                     </children>
                     <VBox.margin>
-                        <Insets top="5.0" />
+                        <Insets left="5.0" right="5.0" top="5.0" />
                     </VBox.margin>
                 </HBox>
-                <Label text="Output file">
-                    <VBox.margin>
-                        <Insets top="10.0" />
-                    </VBox.margin></Label>
-                <HBox spacing="5.0">
-                    <children>
-                        <TextField fx:id="outputFileTF" promptText="Output file path..." HBox.hgrow="ALWAYS" />
-                        <Button fx:id="outputFileBT" onAction="#onOutputFileButtonClick" text="..." HBox.hgrow="ALWAYS" />
-                    </children>
-                    <VBox.margin>
-                        <Insets top="5.0" />
-                    </VBox.margin>
-                </HBox>
-                <HBox alignment="CENTER">
-                    <Button fx:id="processBT" onAction="#onProcessButtonClick">Process</Button>
+                <HBox alignment="CENTER" spacing="10.0">
+                    <Button fx:id="processBT" disable="true" onAction="#onProcessButtonClick">Process</Button>
+                    <Button fx:id="saveBT" disable="true" onAction="#onOutputFileButtonClick">Save</Button>
                     <VBox.margin>
                         <Insets top="10.0" />
                     </VBox.margin>
@@ -52,8 +53,8 @@
                         </TextArea>
                     </Tab>
                     <Tab closable="false" text="Output file">
-                        <TextArea fx:id="outputPrevTA" editable="false" promptText="Output preview..." VBox.vgrow="ALWAYS">
-                        </TextArea>
+                        <TreeView fx:id="outputPrevTV" editable="false" VBox.vgrow="ALWAYS">
+                        </TreeView>
                     </Tab>
                     <VBox.margin>
                         <Insets top="10.0" />
@@ -64,7 +65,7 @@
     </center>
     <bottom>
         <ToolBar>
-            <Label fx:id="statusL" text="Model not loaded"/>
+            <Label fx:id="statusL" text="Model not loaded" />
         </ToolBar>
     </bottom>
 </BorderPane>
